[package]
name = "cryptonaut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dco3 = "0.5.1"
tokio = { version = "1.32.0", features = ["full"]}
clap = { version = "4.4.0", features = ["derive"]}
serde = {version = "1.0.188", features = ["derive"]}

thiserror = "1.0.47"
dotenv = "0.15.0"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"

config = "0.13.3"