[package]
name = "cryptonaut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dco3 = "0.6.1"
tokio = { version = "1.35.0", features = ["full"]}
clap = { version = "4.4.11", features = ["derive"]}
serde = {version = "1.0.193", features = ["derive"]}

thiserror = "1.0.50"
dotenv = "0.15.0"

tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}

config = "0.13.4"

[package.metadata.cross.build]
default-target = "x86_64-unknown-linux-gnu"
pre-build = ["apt-get update"]